--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,6 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
+.card {
+  border: 1px solid blue;
+  border-radius: 8px;
+  padding: 4px;
+  display: inline-block;
+}
